# my_notebook

./: .gitignore  Aruco标记检测.ipynb  Kalman_Filter.py  MTC教程.md  MoveIt学习笔记.md  PnP位姿估计.ipynb  README.md  camera_calib.py  camera_screenshot.py  camera_undistort.py  my_function.py  pnp_estimate.py  功能包说明.md  卡尔曼滤波.ipynb  图像几何变换.ipynb  图像基本操作.ipynb  图像平滑处理.ipynb  图像形态学操作.ipynb  图像特征.ipynb  图像特征匹配.ipynb  图像直方图.ipynb  图像角点检测.ipynb  图像轮廓检测.ipynb  图像边缘检测.ipynb  图像金字塔.ipynb  图像阈值处理.ipynb  模板匹配.ipynb  相机标定.ipynb  视频处理.ipynb
camera_calib/: camera_parameters.json
my_robot_demo/: CMakeLists.txt  package.xml
my_robot_demo/src/: moveit_PSI_demo.cpp
src/ctrl_robot_description/: CMakeLists.txt  package.xml
src/ctrl_robot_description/launch/: display.launch.xml
src/ctrl_robot_description/rviz/: urdf_config.rviz
src/ctrl_robot_description/urdf/: arm.xacro  common_properties.xacro  ctrl_robot.urdf.xacro  mobile_base.xacro
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: bringup.launch.xml
src/my_robot_commander_cpp/: CMakeLists.txt  package.xml
src/my_robot_commander_cpp/src/: commander_template.cpp  test_moveit.cpp
src/my_robot_commander_py/: package.xml  setup.py
src/my_robot_demo/: CMakeLists.txt  package.xml
src/my_robot_demo/src/: moveit_MTC_demo.cpp  moveit_PSI_demo.cpp
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_joints_subscriber/: CMakeLists.txt  package.xml
src/my_robot_moveit_config/: .setup_assistant  package.xml
(+9 files in other folders)
